welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: value True
var continue : Boolean = True
                         ^BDRBuggle:34: error: not found: value False
    continue = False
               ^